--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@
 </head>
 <body class="bg-pink-50">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
